@@ -1,15 +1,13 @@
 package com.saymyname.persistence.dao;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Repository;
-
 import com.saymyname.core.model.people.Attribute;
 import com.saymyname.persistence.mapper.AttributeEntityMapper;
 import com.saymyname.persistence.repository.AttributeRepository;
 import com.saymyname.persistence.repository.AttributeRepository.AttributeMetaRow;
+import org.springframework.stereotype.Repository;
+
+import java.util.List;
+import java.util.Optional;
 
 @Repository
 public class AttributeDao {
@@ -23,30 +21,38 @@ public class AttributeDao {
     }
 
     public List<Attribute> findAll() {
-        return attributeRepository.findAll().stream().map(attributeEntityMapper::toModel).toList();
+        return attributeRepository.findAllWithConcept().stream()
+                .map(attributeEntityMapper::toModel)
+                .toList();
     }
 
     public Optional<Attribute> findById(Long id) {
-        return attributeRepository.findById(id)
+        return attributeRepository.findByIdWithConcept(id)
+                .map(attributeEntityMapper::toModel);
+    }
+
+    public Optional<Attribute> findByAttributeName(String attributeName) {
+        return attributeRepository.findByAttributeNameWithConcept(attributeName)
                 .map(attributeEntityMapper::toModel);
     }
 
     public List<Attribute> getFilterableAttributes() {
-        return attributeRepository.findByFilterTrue()
-                .stream()
+        return attributeRepository.findByFilterTrueWithConcept().stream()
                 .map(attributeEntityMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Attribute> findAllSorts() {
-        return attributeRepository.findBySortTrue().stream().map(attributeEntityMapper::toModel).toList();
+        return attributeRepository.findBySortTrueWithConcept().stream()
+                .map(attributeEntityMapper::toModel)
+                .toList();
     }
 
     public long countAll() {
         return attributeRepository.count();
     }
 
-    public List<AttributeMetaRow> findMetaForCurrentTenant() {
-        return attributeRepository.findMetaForCurrentTenant();
+    public List<AttributeMetaRow> findMetaByTenantId(Long tenantId) {
+        return attributeRepository.findMetaByTenantId(tenantId);
     }
 }
